@startuml

title __TOKENIZE's Class Diagram__\n

  namespace  {
    namespace okenize {
      class Tokenize.Token {
          + pos : int
          + type : String
          + value : String
          + Token()
      }
    }
  }
  

  namespace  {
    namespace okenize {
      class Tokenize.Tokenizer {
          ~ blist : List<String>
          ~ res1 : String
          ~ res2 : String
          ~ tokens : List<Token>
          + getTokens()
          + tokenize()
      }
    }
  }
  

  Tokenize.Tokenizer -up-|> com.sun.tools.javac.Main
  Tokenize.Tokenizer o-- Operators.ValidBinaryOperators : bOp


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
